--- a/src/styles.css
+++ b/src/styles.css
@@ -6,7 +6,7 @@
   font-family: Poppins, sans-serif;
 }
 .App {
-  background-color: #fff;
+  background-color: #c5c5c5;
   min-height: 100vh;
   display: flex;
   justify-content: center;
