--- a/src/components/Reminder.css
+++ b/src/components/Reminder.css
@@ -1,6 +1,7 @@
 .reminder-container {
-  width: 1000px;
+  width: 600px;
   height: 400px;
+  background-color: #fff;
   box-shadow: 0px 1px 5px rgba(0, 0, 0, 0.2);
   border-radius: 15px;
   overflow: hidden;
@@ -8,7 +9,7 @@
 }
 
 .active-container {
-  width: 1000px;
+  width: 600px;
 }
 .sidebar {
   position: relative;
@@ -83,9 +84,13 @@
   width: 100%;
   background: none;
   border: none;
-  font-weight: bold;
+  font-size: 16px;
+  /* font-weight: bold; */
   color: #fff;
   cursor: pointer;
+  display: flex;
+  gap: 5px;
+  align-items: center;
 }
 
 .reminders {
@@ -166,10 +171,12 @@
 }
 .header .btn-container button {
   border: 1px solid darkgray;
-  padding: 5px 10px;
+  padding: 5px 5px;
   border-radius: 5px;
   background-color: white;
   cursor: pointer;
+  display: flex;
+  align-items: center;
 }
 
 .list-input {
